--- a/app/src/main/res/layout/activity_main_java.xml
+++ b/app/src/main/res/layout/activity_main_java.xml
@@ -1,39 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <data>
+
+    </data>
+
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorLightBlue"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_send_content"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="top"
-            android:hint="请输入发送内容，内容转 byte[] 发送"
-            android:minLines="5" />
+            android:layout_height="50dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
-        <Button
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="@string/select_serial_port"
+                android:textColor="@color/white"
+                android:textSize="17dp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spinner_devices"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:background="@color/colorLightBlue"
+                android:textSize="17dp"
+                tools:entries="@array/baudrates" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="@string/select_baud_rate"
+                android:textColor="@color/white"
+                android:textSize="17dp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spinner_baudrate"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@color/colorLightBlue"
+                android:textSize="17dp"
+                tools:entries="@array/baudrates" />
+
+            <Button
+                android:id="@+id/btn_open_device"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:gravity="center"
+                android:text="@string/open_serial_port"
+                android:textSize="17dp" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="onSend"
-            android:text="发送" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="onDestroy"
-            android:text="注销" />
+                <EditText
+                    android:id="@+id/et_data"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:digits="0123456789abcdefABCDEF"
+                    android:hint="@string/input_data"
+                    android:inputType="textCapCharacters"
+                    android:singleLine="true"
+                    android:textSize="17dp" />
 
+                <Button
+                    android:id="@+id/btn_send_data"
+                    style="@style/ButtonStyle"
+                    android:text="@string/send_data" />
+
+                <Button
+                    android:id="@+id/btn_load_list"
+                    style="@style/ButtonStyle"
+                    android:text="@string/load_cmd_list" />
+
+            </LinearLayout>
+
+            <include
+                layout="@layout/include_fragment_container"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
     </LinearLayout>
 
-
-</RelativeLayout>
+</layout>
