--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,22 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorItemGrey">#e4e4e4</color>
+    <color name="colorVeryLightBlue">#55a0a7cc</color>
+    <color name="colorLightBlue">#ffa0a7cc</color>
+
+    <color name="log_bg">#e5e5e5</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="on_pressed">#30bfbfbf</color>
+    <color name="secondary_text">#727272</color>
+    <color name="divider">#B6B6B6</color>
+
+    <color name="color_888888">#888888</color>
+    <color name="color_20ffffff">#20ffffff</color>
 </resources>
