--- a/app/src/main/res/layout/activity_main_java.xml
+++ b/app/src/main/res/layout/activity_main_java.xml
@@ -5,7 +5,8 @@
 
     </data>
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorLightBlue"
