--- a/app/src/main/res/layout/fragment_log.xml
+++ b/app/src/main/res/layout/fragment_log.xml
@@ -1,50 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00000000"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="#00000000"
+        android:orientation="vertical">
 
 
-        <Button
-            android:id="@+id/btn_clear_log"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+
+            <Button
+                android:id="@+id/btn_clear_log"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="清除日志"
+                android:textSize="14dp" />
+
+            <Button
+                android:id="@+id/btn_auto_end"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="自动显示最新日志"
+                android:textSize="14dp" />
+
+            <Button
+                android:id="@+id/btn_whether_hexadecimal"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textSize="14dp"
+                android:text="Hex-byte转换"
+                android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/lv_logs"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="清除日志"
-            android:textSize="14dp" />
-
-        <Button
-            android:id="@+id/btn_auto_end"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="自动显示最新日志"
-            android:textSize="14dp" />
-
-        <Button
-            android:id="@+id/btn_whether_hexadecimal"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:textSize="14dp"
-            android:text="Hex-byte转换"
-            android:layout_height="wrap_content"/>
+            android:fastScrollEnabled="true" />
 
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/lv_logs"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fastScrollEnabled="true" />
-
-
-</LinearLayout>
+</layout>
