--- a/app/src/main/res/layout/include_fragment_container.xml
+++ b/app/src/main/res/layout/include_fragment_container.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/log_fragment"
     android:name="com.cl.myapplication.fragment.LogFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></fragment>
+    android:layout_height="match_parent" />
