--- a/app/src/main/res/layout/spinner_default_item.xml
+++ b/app/src/main/res/layout/spinner_default_item.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@android:id/text1"
-    style="?android:attr/spinnerItemStyle"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:ellipsize="marquee"
-    android:padding="8dp"
-    android:textAlignment="inherit"
-    android:textColor="@color/black"
-    android:textSize="17dp"
-    tools:text="/dev/ttyS2" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+    </data>
+
+    <TextView
+        android:id="@android:id/text1"
+        style="?android:attr/spinnerItemStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+        android:padding="8dp"
+        android:textAlignment="inherit"
+        android:textColor="@color/black"
+        android:textSize="17dp"
+        tools:text="/dev/ttyS2" />
+
+</layout>
